# NarrativeAlpha

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
backend/: alembic.ini
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py
backend/app/: main.py
backend/app/api/routes/: narratives.py  search.py  version.py
backend/app/core/: config.py  version.py
backend/app/db/: session.py
backend/app/ingestion/: loader.py
backend/app/models/: __init__.py  asset_price.py  company.py  document.py  document_chunk.py  event.py  narrative.py  narrative_evidence.py  narrative_score.py
backend/app/narratives/: __init__.py  aggregator.py  scoring.py  service.py
backend/app/prices/: __init__.py  loader.py  service.py
backend/app/schemas/: narratives.py  search.py  version.py
backend/app/search/: __init__.py  query.py  scoring.py  service.py
backend/tests/: conftest.py  test_hashing.py  test_ingestion.py  test_migrations.py  test_models.py  test_narrative_scoring.py  test_narrative_service.py  test_narratives_api.py  test_price_ingestion.py  test_search_api.py  test_search_query.py  test_version.py
data/: sample_prices.csv
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  styles.css
